    kihwal)

    HDFS-4553. Webhdfs will NPE on some unexpected response codes (Daryn Sharp
    via kihwal)

    HDFS-4544. Error in deleting blocks should not do check disk, for
    all types of errors. (Arpit Agarwal via suresh)

    HDFS-3266. DFSTestUtil#waitCorruptReplicas doesn't sleep between checks.
    (Madhukara Phatak via atm)

Release 0.23.6 - 2013-02-06

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES
    HDFS-4233. NN keeps serving even after no journals started while rolling
    edit. (Kihwal Lee via suresh)

    HDFS-4242. Map.Entry is incorrectly used in LeaseManager since the behavior
    of it is undefined after the iteration or modifications of the map.
    (szetszwo via daryn)

    HDFS-4254. testAllEditsDirsFailOnFlush makes subsequent test cases fail
    (0.23.6 only) (Kihwal Lee via daryn)

    HDFS-4247. saveNamespace should be tolerant of dangling lease (daryn)

    HDFS-4248. Renaming directories may incorrectly remove the paths in leases
    under the tree.  (daryn via szetszwo)

    HDFS-4315. DNs with multiple BPs can have BPOfferServices fail to start
    due to unsynchronized map access. (atm via tgraves)

    HDFS-4270. Replications of the highest priority should be allowed to 
    choose a source datanode that has reached its max replication limit 
    (Derek Dagit via tgraves)

    HDFS-2757. Cannot read a local block that's being written to when
    using the local read short circuit. (Jean-Daniel Cryans via eli)

    HDFS-4385. Maven RAT plugin is not checking all source files (tgraves)

    HDFS-4399. precommit release audit warnings (tgraves)

    HDFS-4426. Secondary namenode shuts down immediately after startup.
    (Arpit Agarwal via suresh)

Release 0.23.5 - 2012-11-28

  INCOMPATIBLE CHANGES

    HDFS-4080. Add a separate logger for block state change logs to enable turning
    off those logs. (Kihwal Lee via suresh)

  NEW FEATURES

  IMPROVEMENTS
