@@ -59,6 +59,9 @@ Release 0.23.7 - UNRELEASED
     HDFS-3266. DFSTestUtil#waitCorruptReplicas doesn't sleep between checks.
     (Madhukara Phatak via atm)
 
+    HDFS-4072. On file deletion remove corresponding blocks pending
+    replications. (Jing Zhao via suresh)
+
 Release 0.23.6 - 2013-02-06
 
   INCOMPATIBLE CHANGES
